# hop-editor

./: Cargo.toml  README.md  git-integration.md  syntax.toml  theme.toml  todo-git-integration.md
.github/workflows/: rust.yml
assets/: config.toml  help.txt  how-to-use.md  syntax.toml
src/: colored_text.rs  config.rs  interface.rs  main.rs  syntax.rs  syntax.toml  tab.rs  theme.rs  tree.rs
src/forest/: api.rs  entry.rs  local_fs.rs  mod.rs  search_fs.rs  utils.rs
src/interface/: colored_text.rs  input.rs  menu.rs  mod.rs  popup.rs
src/tab/: clipboard.rs  deletion.rs  history.rs  insertion.rs  mod.rs  movement.rs  rendering.rs
src/tree/: entry.rs  local_fs.rs  mod.rs  utils.rs  walker.rs
