[package]
name = 'hop-editor'
version = '1.0.0'
edition = '2021'
keywords = []
authors = [ 'Nathan ROYER <nathan.royer.pro@gmail.com>' ]
repository = 'https://github.com/NathanRoyer/hop-editor'
description = 'terminal code editor'
categories = [ 'command-line-utilities' ]
license = 'MIT'

[profile.release]
debug = true

[dependencies]
crossterm = { version = "0.29", default-features = false, features = ['bracketed-paste', 'events'] }
toml = { version = '0.9', default-features = false, features = ['serde', 'parse'] }
# nix = { version = '0.30', features = ['user', 'process', 'signal'] }
serde = { version = '1.0', features = ['derive', 'rc'] }
hex_color = { version = '3.0', features = ['serde'] }
litemap = { version = '0.8', features = ['serde'] }

# vt100
